--- a/css/styles.css
+++ b/css/styles.css
@@ -2771,7 +2771,8 @@ textarea.form-control-lg {
   --bs-btn-padding-y: 0.375rem;
   --bs-btn-font-family: Merriweather Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   --bs-btn-font-size: 1rem;
-  --bs-btn-font-weight: 400;
+  --bs-btn-font-weight: 300;
+  letter-spacing: 0.05em;
   --bs-btn-line-height: 1.5;
   --bs-btn-color: #212529;
   --bs-btn-bg: transparent;
@@ -2849,11 +2850,11 @@ textarea.form-control-lg {
   --bs-btn-bg: #9e3039;
   --bs-btn-border-color: #9e3039;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #c34e2e;
-  --bs-btn-hover-border-color: #c34e2e;
+  --bs-btn-hover-bg: #9e3039;
+  --bs-btn-hover-border-color: #9e3039;
   --bs-btn-focus-shadow-rgb: 246, 122, 88;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #c34e2e;
+  --bs-btn-active-bg: #9e3039;
   --bs-btn-active-border-color: #b74a2c;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
@@ -10937,13 +10938,6 @@ header.masthead {
   background-size: cover;
 }
 
-#contact {
-  background: linear-gradient(to bottom, rgba(158, 48, 57, .7) 0%, rgba(158, 48, 57, 1) 50%),
-  url("../assets/img/bg.webp");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
 header.masthead h1, header.masthead .h1 {
   font-size: 2.25rem;
 }
