--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
-  --bs-light: #E6E1E8;
+  --bs-light: #f9f7fb;
   --bs-dark: #343a40;
   --bs-primary-rgb: 158, 48, 57;
   --bs-secondary-rgb: 85, 86, 88;
@@ -48,7 +48,7 @@
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 220, 53, 69;
-  --bs-light-rgb: 230, 225, 232;
+  --bs-light-rgb: 249, 247, 251;
   --bs-dark-rgb: 52, 58, 64;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
