--- a/css/styles.css
+++ b/css/styles.css
@@ -10871,13 +10871,16 @@ hr.divider-light {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   background-color: #fff;
   transition: background-color 0.2s ease;
+  transition: top 0.2s ease;
 }
-#mainNav .navbar-brand {
+#mainNav .navbar-brand,
+#mainNav #navbarToggler {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   color: #343a40;
 }
-#mainNav .navbar-nav .nav-item .nav-link {
+#mainNav .navbar-nav .nav-item .nav-link,
+#mainNav #navbarToggler {
   color: #555658;
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
@@ -10890,10 +10893,10 @@ hr.divider-light {
 #mainNav .navbar-nav .nav-item .nav-link.active {
   color: #9e3039 !important;
 }
-@media (min-width: 992px) {
+
   #mainNav {
     box-shadow: none;
-    background-color: transparent;
+    background-color: var(--bs-primary);
   }
   #mainNav .navbar-brand {
     color: rgba(255, 255, 255, 0.7);
@@ -10901,11 +10904,14 @@ hr.divider-light {
   #mainNav .navbar-brand:hover {
     color: #fff;
   }
-  #mainNav .navbar-nav .nav-item .nav-link {
+  #mainNav .navbar-nav .nav-item .nav-link,
+  #mainNav #navbarToggler{
     color: rgba(255, 255, 255, 0.7);
     padding: 0 1rem;
   }
-  #mainNav .navbar-nav .nav-item .nav-link:hover {
+
+  #mainNav .navbar-nav .nav-item .nav-link:hover,
+  #mainNav #navbarToggler:hover {
     color: #fff;
   }
   #mainNav .navbar-nav .nav-item:last-child .nav-link {
@@ -10915,7 +10921,9 @@ hr.divider-light {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
     background-color: #fff;
   }
-  #mainNav.navbar-shrink .navbar-brand {
+  #mainNav.navbar-shrink .navbar-brand,
+  #mainNav.navbar-shrink #navbarToggler {
+  
     color: #343a40;
   }
   #mainNav.navbar-shrink .navbar-brand:hover {
@@ -10927,7 +10935,7 @@ hr.divider-light {
   #mainNav.navbar-shrink .navbar-nav .nav-item .nav-link:hover {
     color: #9e3039;
   }
-}
+
 
 header.masthead {
   padding-top: 10rem;
