--- a/css/styles.css
+++ b/css/styles.css
@@ -12653,7 +12653,8 @@ hr.divider-light {
 
 #contact,
 #services{
-  background: url("../assets/img/road.svg") no-repeat center;
+  background:
+  url("../assets/img/road.svg") no-repeat center;
   background-size: cover;
   background-attachment: fixed;
 }
