--- a/css/styles.css
+++ b/css/styles.css
@@ -12653,8 +12653,14 @@ hr.divider-light {
 
 #contact,
 #services{
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, .0) 10%, rgba(255, 255, 255, .0) 90%, rgba(255, 255, 255, 1) 100%),
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, .0) 20%, rgba(255, 255, 255, .0) 85%, rgba(255, 255, 255, 1) 100%),
   url("../assets/img/road.svg") no-repeat center;
+  background-size: cover;
+}
+
+#contact {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, .0) 20%, rgba(255, 255, 255, .0) 85%, rgba(255, 255, 255, 0) 100%),
+    url("../assets/img/road.svg") no-repeat center;
   background-size: cover;
 }
 
