--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
-  --bs-light: #f2f0f5;
+  --bs-light: #f3f1f6;
   --bs-dark: #343a40;
   --bs-primary-rgb: 158, 48, 57;
   --bs-secondary-rgb: 85, 86, 88;
@@ -49,7 +49,7 @@
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 220, 53, 69;
-  --bs-light-rgb: 242, 240, 245;
+  --bs-light-rgb: 243, 241, 246;
   --bs-dark-rgb: 52, 58, 64;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
@@ -12651,15 +12651,10 @@ hr.divider-light {
   background-color: #fff;
 }
 
-#services{
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, .0) 20%, rgba(255, 255, 255, .0) 85%, rgba(255, 255, 255, 1) 100%),
-   no-repeat center;
-  background-size: cover;
-}
 
-#contact {
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, .0) 20%, rgba(255, 255, 255, .0) 85%, rgba(255, 255, 255, 0) 100%),
-  no-repeat center;
+.road {
+  background: 
+    url("../assets/img/road.svg") no-repeat center;
   background-size: cover;
 }
 
