--- a/css/styles.css
+++ b/css/styles.css
@@ -24,32 +24,32 @@
   --bs-cyan: #0dcaf0;
   --bs-black: #000;
   --bs-white: #fff;
-  --bs-gray: #555658;
+  --bs-gray: #5d6166;
   --bs-gray-dark: #343a40;
   --bs-gray-100: #E6E1E8;
   --bs-gray-200: #e9ecef;
   --bs-gray-300: #dee2e6;
   --bs-gray-400: #ced4da;
   --bs-gray-500: #adb5bd;
-  --bs-gray-600: #555658;
-  --bs-gray-700: #495057;
+  --bs-gray-600: #6c757d;
+  --bs-gray-700: #5d6166;
   --bs-gray-800: #343a40;
-  --bs-gray-900: #343a40;
-  --bs-primary: #9e3039;
-  --bs-secondary: #555658;
+  --bs-gray-900: #212529;
+  --bs-primary: #343a40;
+  --bs-secondary: #9e3039;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
-  --bs-light: #f3f1f6;
+  --bs-light: #f8f9fa;
   --bs-dark: #343a40;
-  --bs-primary-rgb: 158, 48, 57;
-  --bs-secondary-rgb: 85, 86, 88;
+  --bs-primary-rgb: 85, 86, 88;
+  --bs-secondary-rgb: 158, 48, 57;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 220, 53, 69;
-  --bs-light-rgb: 243, 241, 246;
+  --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 52, 58, 64;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
@@ -3304,7 +3304,7 @@ fieldset:disabled .btn {
 }
 
 .btn-primary {
-  --bs-btn-color: #fff;
+  --bs-btn-color: rgba(255, 255, 255, 0.75);
   --bs-btn-bg: #9e3039;
   --bs-btn-border-color: #9e3039;
   --bs-btn-hover-color: #fff;
@@ -3440,7 +3440,7 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: #9e3039;
+  --bs-btn-color: rgba(255, 255, 255, 0.75);
   --bs-btn-border-color: #9e3039;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #9e3039;
@@ -3559,7 +3559,7 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-dark {
-  --bs-btn-color: #343a40;
+  --bs-btn-color: #fff;
   --bs-btn-border-color: #343a40;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #343a40;
@@ -12745,7 +12745,7 @@ hr.divider-light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(158, 48, 57, 1) 25%, rgba(158, 48, 57, .5) 55%, rgba(255, 255, 255, .2) 75%, rgba(255, 255, 255, 1) 100%),
+  background: linear-gradient(to bottom, rgba(52, 58, 64, 1) 15%, rgba(52, 58, 64, .8) 70%, rgba(52, 58, 64, .6) 100%),
     url("../assets/img/bg.webp");
   background-position: center;
   background-repeat: no-repeat;
