--- a/css/styles.css
+++ b/css/styles.css
@@ -12747,7 +12747,7 @@ header.masthead {
   padding-bottom: calc(10rem - 4.5rem);
   background: linear-gradient(to bottom, rgba(52, 58, 64, 1) 15%, rgba(52, 58, 64, .8) 70%, rgba(52, 58, 64, .6) 100%),
     url("../assets/img/bg.webp");
-  background-position: center;
+  background-position: 30% 25%;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
