--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
   --bs-link-color: #dc3545;
-  --bs-link-hover-color: #dc3545;
+  --bs-link-hover-color: #b02a37;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
