--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
   --bs-purple: #6f42c1;
   --bs-pink: #d63384;
   --bs-red: #dc3545;
-  --bs-orange: #9e3039;
+  --bs-orange: #fd7e14;
   --bs-yellow: #ffc107;
   --bs-green: #198754;
   --bs-teal: #20c997;
@@ -36,30 +36,30 @@
   --bs-gray-700: #5d6166;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #343a40;
-  --bs-secondary: #9e3039;
+  --bs-primary: #182636;
+  --bs-secondary: #80a3ac;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #343a40;
-  --bs-primary-rgb: 85, 86, 88;
-  --bs-secondary-rgb: 158, 48, 57;
+  --bs-primary-rgb: 24, 38, 54;
+  --bs-secondary-rgb: 147, 189, 199;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 220, 53, 69;
   --bs-light-rgb: 248, 249, 250;
-  --bs-dark-rgb: 52, 58, 64;
+  --bs-dark-rgb: 24, 38, 54;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
-  --bs-body-color-rgb: 52, 58, 64;
+  --bs-body-color-rgb: 85, 86, 88;
   --bs-body-bg-rgb: 255, 255, 255;
-  --bs-font-sans-serif: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-sans-serif: 'Oswald',sans-serif;
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-  --bs-body-font-family: Merriweather, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  --bs-body-font-family: 'Kodchasan',sans-serif;
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 300;
   --bs-body-line-height: 1.5;
@@ -75,8 +75,8 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #dc3545;
-  --bs-link-hover-color: #b02a37;
+  --bs-link-color: #93bdc7;
+  --bs-link-hover-color: #6f9da5;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
@@ -128,9 +128,10 @@ h1,
 .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 500;
+  font-family: var(--bs-font-sans-serif);
+  font-weight: 400;
   line-height: 1.2;
+  letter-spacing: 0.1rem;
 }
 
 h1,
@@ -3210,10 +3211,10 @@ textarea.form-control.is-invalid {
 .btn {
   --bs-btn-padding-x: 0.75rem;
   --bs-btn-padding-y: 0.375rem;
-  --bs-btn-font-family: Merriweather Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  --bs-btn-font-family: var(--bs-font-sans-serif);
   --bs-btn-font-size: 1rem;
   --bs-btn-font-weight: 300;
-  letter-spacing: 0.05em;
+  letter-spacing: 0.1em;
   --bs-btn-line-height: 1.5;
   --bs-btn-color: #343a40;
   --bs-btn-bg: transparent;
@@ -3228,8 +3229,9 @@ textarea.form-control.is-invalid {
   padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
   font-family: var(--bs-btn-font-family);
   font-size: var(--bs-btn-font-size);
-  font-weight: var(--bs-btn-font-weight);
+  font-weight: 300;
   line-height: var(--bs-btn-line-height);
+  letter-spacing: 0.1em;
   color: var(--bs-btn-color);
   text-align: center;
   text-decoration: none;
@@ -3306,19 +3308,19 @@ fieldset:disabled .btn {
 
 .btn-primary {
   --bs-btn-color: rgba(255, 255, 255, 0.75);
-  --bs-btn-bg: #9e3039;
-  --bs-btn-border-color: #9e3039;
+  --bs-btn-bg: #80a3ac;
+  --bs-btn-border-color: #80a3ac;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #882a32;
-  --bs-btn-hover-border-color: #9e3039;
+  --bs-btn-hover-bg: #93bdc7;
+  --bs-btn-hover-border-color: #93bdc7;
   --bs-btn-focus-shadow-rgb: 246, 122, 88;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #9e3039;
-  --bs-btn-active-border-color: #b74a2c;
+  --bs-btn-active-bg: #93bdc7;
+  --bs-btn-active-border-color: #93bdc7;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #9e3039;
-  --bs-btn-disabled-border-color: #9e3039;
+  --bs-btn-disabled-bg: #93bdc7;
+  --bs-btn-disabled-border-color: #93bdc7;
 }
 
 .btn-secondary {
@@ -3442,18 +3444,18 @@ fieldset:disabled .btn {
 
 .btn-outline-primary {
   --bs-btn-color: rgba(255, 255, 255, 0.75);
-  --bs-btn-border-color: #9e3039;
+  --bs-btn-border-color: #80a3ac;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #9e3039;
-  --bs-btn-hover-border-color: #9e3039;
+  --bs-btn-hover-bg: #80a3ac;
+  --bs-btn-hover-border-color: #80a3ac;
   --bs-btn-focus-shadow-rgb: 244, 98, 58;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #9e3039;
-  --bs-btn-active-border-color: #9e3039;
+  --bs-btn-active-bg: #80a3ac;
+  --bs-btn-active-border-color: #80a3ac;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #9e3039;
+  --bs-btn-disabled-color: #80a3ac;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #9e3039;
+  --bs-btn-disabled-border-color: #80a3ac;
   --bs-gradient: none;
 }
 
@@ -4327,7 +4329,8 @@ fieldset:disabled .btn {
 .navbar-nav {
   --bs-nav-link-padding-x: 0;
   --bs-nav-link-padding-y: 0.5rem;
-  --bs-nav-link-font-weight: ;
+  --bs-nav-link-font-weight: 200 !important;
+  text-transform: uppercase;
   --bs-nav-link-color: var(--bs-navbar-color);
   --bs-nav-link-hover-color: var(--bs-navbar-hover-color);
   --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
@@ -7661,12 +7664,12 @@ fieldset:disabled .btn {
 }
 
 .link-primary {
-  color: #9e3039 !important;
+  color: #5a7b87 !important;
 }
 
 .link-primary:hover,
 .link-primary:focus {
-  color: #7c2129 !important;
+  color: #3d5d6e !important;
 }
 
 .link-secondary {
@@ -12637,18 +12640,19 @@ body {
 
 .btn-xl {
   padding: 1.25rem 2.25rem;
-  font-size: 0.85rem;
-  font-weight: 700;
+  font-size: 1rem;
+  font-weight: 300;
   text-transform: uppercase;
   border: none;
   border-radius: 10rem;
+  letter-spacing: 0.1rem;
 }
 
 hr.divider {
   height: 0.2rem;
   max-width: 3.25rem;
   margin: 1.5rem auto;
-  background-color: #9e3039;
+  background-color: #80a3ac;
   opacity: 1;
 }
 
@@ -12672,18 +12676,20 @@ hr.divider-light {
 
 #mainNav .navbar-brand,
 #mainNav #navbarToggler {
-  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
+  font-family: var(--bs-font-sans-serif);
+  font-weight: 300;
+  letter-spacing: 0.2rem;
   color: #343a40;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link,
 #mainNav #navbarToggler {
   color: #555658;
-  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
+  font-family: var(--bs-font-sans-serif);
+  font-weight: 300;
   font-size: 0.9rem;
   padding: 0.75rem 0;
+  letter-spacing: 0.1rem;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link:hover,
@@ -12784,7 +12790,7 @@ hr.divider-light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(52, 58, 64, 1) 15%, rgba(52, 58, 64, .8) 70%, rgba(52, 58, 64, .6) 100%),
+  background: linear-gradient(to bottom, rgba(24, 38, 54) 15%, rgba(24, 38, 54, 0.9) 40%, rgba(24, 38, 54, 0.6)),
     url("../assets/img/bg.webp");
   background-position: 30% 25%;
   background-repeat: no-repeat;
