--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,22 @@ h1,
   letter-spacing: 0.1rem;
 }
 
+.letter-spaceing {
+  letter-spacing: 0.2rem;
+}
+
+.f-heading {
+  font-family: var(--bs-font-sans-serif);
+  font-weight: 300;
+  line-height: 1.2;
+}
+
+.f-body {
+  font-family: var(--bs-body-font-family);
+  font-weight: 300;
+  line-height: 1.5;
+}
+
 h1,
 .h1 {
   font-size: calc(1.375rem + 1.5vw);
@@ -3307,7 +3323,7 @@ fieldset:disabled .btn {
 }
 
 .btn-primary {
-  --bs-btn-color: rgba(255, 255, 255, 0.75);
+  --bs-btn-color: #fff;
   --bs-btn-bg: #80a3ac;
   --bs-btn-border-color: #80a3ac;
   --bs-btn-hover-color: #fff;
