--- a/css/styles.css
+++ b/css/styles.css
@@ -12820,6 +12820,11 @@ header.masthead .h1 {
   font-size: 2.25rem;
 }
 
+form {
+  max-width: 700px;
+  margin: auto;
+}
+
 @media (min-width: 992px) {
   header.masthead {
     height: 100vh;
